<?xml version="1.0"?>
<package format="3">
  <name>vention_control</name>
  <version>0.0.1</version>
  <description>ROS 2 version of the Vention Control Package</description>

  <maintainer email="medusar@todo.todo">medusar</maintainer>
  <license>Apache-2.0</license>
  
  <!-- Build tools (for ament / Python in ROS 2) -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core dependencies for building messages/services -->
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>

  <!-- Python-based ROS 2 client library -->
  <depend>rclpy</depend>

  <!-- Standard messages & services you use -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <!-- (Optional) Additional dependencies for runtime if needed:
       <exec_depend>roboticstoolbox-python</exec_depend>
       <exec_depend>MachineMotion</exec_depend>
       etc.
  -->

  <export>
    <!-- Indicate this is an ament-cmake package -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
