<?xml version="1.0"?>
<package format="3">
  <!--
    This package.xml defines the unm_ros2_vention package for controlling
    a Vention MachineMotion v2 (or v2OneDrive) using ROS 2.
    
    It includes Python nodes that depend on rclpy, std_msgs, and
    (optionally) paho-mqtt for MQTT communication. 
  -->
  
  <name>scripts</name>
  <version>0.0.1</version>
  <description>
    ROS 2 package containing nodes and wrappers for controlling
    Vention MachineMotion v2 hardware.
  </description>

  <!-- Author / Maintainer Info -->
  <maintainer email="bennettrussell@unm.edu">Bennett Russell</maintainer>
  <!-- Add more maintainers if needed -->
  <license>Apache-2.0</license>

  <!-- Build system dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <!-- Build / Execution Dependencies -->
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <!-- If you use standard message types: -->
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Export section for ament -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
